--- a/app/src/main/res/layout/activity_restaurants.xml
+++ b/app/src/main/res/layout/activity_restaurants.xml
@@ -10,8 +10,9 @@
         android:layout_height="wrap_content"
         android:text="Restaurants near"
         android:id="@+id/locationTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:layout_marginTop="45dp"
+        android:layout_centerHorizontal="false"
+        android:layout_centerVertical="false"/>
 
     <ListView
         android:layout_width="match_parent"
@@ -19,6 +20,7 @@
         android:id="@+id/listView"
         android:layout_below="@+id/locationTextView"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="30dp"/>
 
 </RelativeLayout>
