--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,25 +26,38 @@
         android:textSize="45sp"
         android:textStyle="bold" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/locationEditText"
-        android:background="@color/colorTextIcons"
-        android:layout_above="@id/findRestaurantsButton"
-        android:layout_marginBottom="10dp"
-        android:padding="5dp"
-        android:layout_centerHorizontal="true"
-        android:hint="Enter Zip Code"/>
+<!--    <EditText-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/locationEditText"-->
+<!--        android:background="@color/colorTextIcons"-->
+<!--        android:layout_above="@id/findRestaurantsButton"-->
+<!--        android:layout_marginBottom="10dp"-->
+<!--        android:padding="5dp"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:hint="Enter Zip Code"/>-->
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Find Restaurants"
         android:id="@+id/findRestaurantsButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_above="@id/savedRestaurantsButton"
         android:background="@color/colorAccent"
-        android:textColor="@color/colorTextIcons"/>
+        android:textColor="@color/colorTextIcons"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="10dp"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Saved Restaurants"
+        android:id="@+id/savedRestaurantsButton"
+        android:background="@color/colorAccent"
+        android:textColor="@color/colorTextIcons"
+        android:visibility="visible"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 </RelativeLayout>
